--- a/app/src/main/res/layout/dialog_add_event.xml
+++ b/app/src/main/res/layout/dialog_add_event.xml
@@ -2,12 +2,16 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="radimbures.firstaidlog.AddEvent">
+    tools:context="radimbures.firstaidlog.EventsList"
+    android:padding="4dp"
+    >
 
     <!-- TODO: udělat design fragmentu pro přidání infa do DB -->
-    <TextView
+    <EditText
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="Event add" />
+        android:layout_height="wrap_content"
+        android:hint="@string/name_of_the_event"
+        android:id="@+id/add_event_name"
+        />
 
 </RelativeLayout>
