--- a/app/src/main/res/layout/row_event.xml
+++ b/app/src/main/res/layout/row_event.xml
@@ -8,6 +8,6 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:id="@+id/name_of_event"
-        android:textColor="@android:color/holo_blue_bright"/>
+        android:textColor="@android:color/holo_blue_dark"/>
 
 </LinearLayout>
