--- a/app/src/main/res/layout/fragment_empty_list.xml
+++ b/app/src/main/res/layout/fragment_empty_list.xml
@@ -1,5 +1,6 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:fab="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="radimbures.firstaidlog.EmptyList">
@@ -9,5 +10,17 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:text="Oh no, it seems that there's no data to display. Start adding some using + button." />
+
+    <com.getbase.floatingactionbutton.FloatingActionButton
+        android:id="@+id/pink_icon"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        fab:fab_icon="@drawable/plusicon"
+        fab:fab_colorNormal="@color/colorAccent"
+        fab:fab_colorPressed="@color/colorPrimaryDark"
+        android:layout_gravity="bottom|end"
+        android:layout_marginBottom="16dp"/>
+
+
 
 </FrameLayout>
