--- a/app/src/main/res/layout/fragment_empty_participants_list.xml
+++ b/app/src/main/res/layout/fragment_empty_participants_list.xml
@@ -3,7 +3,7 @@
     xmlns:fab="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="radimbures.firstaidlog.EmptyEventsList">
+    tools:context="radimbures.firstaidlog.EmptyParticipantsList">
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
@@ -20,7 +20,5 @@
         fab:fab_colorPressed="@color/colorPrimaryDark"
         android:layout_gravity="bottom|end"
         android:layout_margin="@dimen/fab_margin"/>
-
-
 
 </FrameLayout>
