--- a/app/src/main/res/layout/fragment_participants_list.xml
+++ b/app/src/main/res/layout/fragment_participants_list.xml
@@ -5,6 +5,14 @@
     android:layout_height="match_parent"
     tools:context="radimbures.firstaidlog.ParticipantsList">
 
+
+    <TextView
+        android:layout_width="match_parent"
+        android:id="@+id/tv_empty"
+        android:layout_height="match_parent"
+        android:text="Oh no, it seems that there's no data to display. Start adding some using + button." />
+
+
     <ListView
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
