--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -2,9 +2,17 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="radimbures.firstaidlog.MainActivity">
+
     <item
-        android:id="@+id/action_settings"
+        android:id="@+id/action_tips"
         android:orderInCategory="100"
-        android:title="@string/action_settings"
+        android:title="@string/useful_tips"
+        app:showAsAction="never" />
+
+
+    <item
+        android:id="@+id/action_about"
+        android:orderInCategory="200"
+        android:title="@string/about_the_app"
         app:showAsAction="never" />
 </menu>
