--- a/app/src/main/res/layout/fragment_add_from_db.xml
+++ b/app/src/main/res/layout/fragment_add_from_db.xml
@@ -1,16 +1,22 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context="radimbures.firstaidlog.AddFromDB">
 
     <!-- TODO: Update blank fragment layout -->
 
     <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical"
-        >
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
+
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/add_db_part_info"/>
 
 
          <LinearLayout
@@ -24,12 +30,11 @@
         <Button
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Add selected participants to this event"/>
+            android:text="@string/btn_add_from_db"/>
 
 
 
     </LinearLayout>
 
 
-
-</FrameLayout>
+</ScrollView>
