přidání user database

--- a/app/src/main/res/layout/fragment_events_list.xml
+++ b/app/src/main/res/layout/fragment_events_list.xml
@@ -6,6 +6,12 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context="radimbures.firstaidlog.EventsList">
 
+    <TextView
+        android:layout_width="match_parent"
+        android:id="@+id/tv_empty"
+        android:layout_height="match_parent"
+        android:text="Oh no, it seems that there's no data to display. Start adding some using + button." />
+
     <ListView
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
