--- a/app/src/main/res/layout/fragment_participants_list.xml
+++ b/app/src/main/res/layout/fragment_participants_list.xml
@@ -19,37 +19,14 @@
         android:id="@+id/list_participants">
     </ListView>
 
-    <com.getbase.floatingactionbutton.FloatingActionsMenu
-        android:id="@+id/multiple_actions"
+    <com.getbase.floatingactionbutton.FloatingActionButton
+        android:id="@+id/fab_add_group"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        fab:fab_labelStyle="@style/menu_labels_style"
-        fab:fab_addButtonColorNormal="@color/colorAccent"
-        fab:fab_addButtonColorPressed="@color/colorPrimaryDark"
-        fab:fab_addButtonPlusIconColor="@color/white"
+        fab:fab_icon="@drawable/ic_group_add_white_24px"
+        fab:fab_colorNormal="@color/colorAccent"
+        fab:fab_colorPressed="@color/colorPrimaryDark"
         android:layout_gravity="bottom|end"
-        android:layout_margin="@dimen/fab_margin">
-
-        <com.getbase.floatingactionbutton.FloatingActionButton
-            android:id="@+id/add_new"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            fab:fab_colorNormal="@color/colorAccent"
-            fab:fab_title="@string/fab_add_new"
-            fab:fab_size="mini"
-            fab:fab_icon="@drawable/ic_person_add_white_24px"
-            fab:fab_colorPressed="@color/colorPrimaryDark"/>
-
-        <com.getbase.floatingactionbutton.FloatingActionButton
-            android:id="@+id/add_from_db"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            fab:fab_colorNormal="@color/colorAccent"
-            fab:fab_colorPressed="@color/colorPrimaryDark"
-            fab:fab_icon="@drawable/ic_group_add_white_24px"
-            fab:fab_size="mini"
-            fab:fab_title="@string/fab_add_db" />
-
-    </com.getbase.floatingactionbutton.FloatingActionsMenu>
+        android:layout_margin="@dimen/fab_margin"/>
 
 </FrameLayout>
