--- a/app/src/main/res/layout/fragment_add_from_db.xml
+++ b/app/src/main/res/layout/fragment_add_from_db.xml
@@ -30,6 +30,7 @@
         <Button
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:id="@+id/btn_add_group"
             android:text="@string/btn_add_from_db"/>
 
 
