--- a/app/src/main/res/layout/fragment_add_injury.xml
+++ b/app/src/main/res/layout/fragment_add_injury.xml
@@ -42,6 +42,12 @@
                 android:hint="Injury description" />
         </android.support.design.widget.TextInputLayout>
 
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/take_photo"
+            android:text="Take photo of injury"/>
+
 
     </LinearLayout>
 
