table Photos, active for participant

--- a/app/src/main/res/layout/fragment_add_participant.xml
+++ b/app/src/main/res/layout/fragment_add_participant.xml
@@ -22,6 +22,7 @@
         <CheckBox
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
+            android:id="@+id/status"
             android:layout_weight="1"/>
 
         <android.support.design.widget.TextInputLayout
