--- a/app/src/main/res/layout/fragment_add_from_db.xml
+++ b/app/src/main/res/layout/fragment_add_from_db.xml
@@ -3,6 +3,9 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:paddingLeft="16dp"
+    android:paddingRight="16dp"
+    android:paddingTop="16dp"
     tools:context="radimbures.firstaidlog.AddFromDB">
 
     <!-- TODO: Update blank fragment layout -->
