--- a/app/src/main/res/layout/fragment_add_participant.xml
+++ b/app/src/main/res/layout/fragment_add_participant.xml
@@ -2,7 +2,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:paddingLeft="16dp"
+    android:paddingRight="16dp"
+    android:paddingTop="16dp"
     android:orientation="horizontal"
     tools:context="radimbures.firstaidlog.AddParticipant">
 
@@ -10,12 +12,18 @@
     <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:weightSum="2"
         android:orientation="vertical">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:weightSum="2"
+            android:orientation="horizontal">
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:textSize="20sp"
             android:layout_weight="1"
             android:text="Is user active?"/>
 
@@ -24,6 +32,7 @@
             android:layout_height="match_parent"
             android:id="@+id/status"
             android:layout_weight="1"/>
+        </LinearLayout>
 
         <android.support.design.widget.TextInputLayout
             android:id="@+id/input_layout_name"
