--- a/app/src/main/res/layout/fragment_participant_info.xml
+++ b/app/src/main/res/layout/fragment_participant_info.xml
@@ -3,13 +3,16 @@
     xmlns:fab="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:paddingLeft="16dp"
+    android:paddingRight="16dp"
+    android:paddingTop="16dp"
     tools:context="radimbures.firstaidlog.ParticipantInfo">
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="tady bude souhrnné info o účastníkovi akce" />
+        android:id="@+id/name" />
 
     <com.getbase.floatingactionbutton.FloatingActionButton
         android:id="@+id/fab_backup_participant"
