--- a/app/src/main/res/layout/fragment_injuries.xml
+++ b/app/src/main/res/layout/fragment_injuries.xml
@@ -2,7 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="radimbures.firstaidlog.Injuries">
+    tools:context="radimbures.firstaidlog.Incidents">
 
     <!-- TODO: Update blank fragment layout -->
     <android.support.v4.app.FragmentTabHost
