date&time picker in incidents working

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -22,4 +22,8 @@
         <item name="android:textColor">@color/white</item>
     </style>
 
+    <style name="TabText">
+        <item name="android:textColor">@color/white</item>
+    </style>
+
 </resources>
