--- a/app/src/main/res/layout/fragment_first_aid_log.xml
+++ b/app/src/main/res/layout/fragment_first_aid_log.xml
@@ -8,7 +8,8 @@
     <android.support.v4.app.FragmentTabHost
         android:id="@+id/tabHost"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        >
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -16,7 +17,9 @@
             <TabWidget
                 android:id="@android:id/tabs"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+
+                >
             </TabWidget>
             <FrameLayout
                 android:id="@android:id/tabcontent"
