--- a/app/src/main/res/layout/recycler_view_item.xml
+++ b/app/src/main/res/layout/recycler_view_item.xml
@@ -8,7 +8,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:paddingTop="20dp"
-        android:contentDescription="photo"
+        android:contentDescription="@string/photo"
         android:id="@+id/imageView"/>
 
 </android.support.constraint.ConstraintLayout>
