--- a/app/src/main/res/layout/dialog_image.xml
+++ b/app/src/main/res/layout/dialog_image.xml
@@ -8,7 +8,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/fotka"
-        android:contentDescription="photo"
+        android:contentDescription="@string/photo"
         />
 
 </LinearLayout>
