--- a/app/src/main/res/layout/fragment_add_incident.xml
+++ b/app/src/main/res/layout/fragment_add_incident.xml
@@ -22,14 +22,15 @@
                 android:id="@+id/input_incident_title"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="Incident title" />
+                android:hint="@string/incident_title" />
         </android.support.design.widget.TextInputLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:weightSum="2"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            android:baselineAligned="false">
 
             <android.support.design.widget.TextInputLayout
                 android:id="@+id/input_layout_date"
@@ -45,7 +46,7 @@
                     android:cursorVisible="false"
                     android:focusable="false"
                     android:focusableInTouchMode="false"
-                    android:hint="Date"
+                    android:hint="@string/date"
                     tools:ignore="TextFields" />
             </android.support.design.widget.TextInputLayout>
 
@@ -63,7 +64,7 @@
                     android:cursorVisible="false"
                     android:focusable="false"
                     android:focusableInTouchMode="false"
-                    android:hint="Time" />
+                    android:hint="@string/time" />
             </android.support.design.widget.TextInputLayout>
 
         </LinearLayout>
@@ -81,7 +82,7 @@
                 android:gravity="top|start"
                 android:maxLines="10"
                 android:minLines="6"
-                android:hint="Incident description" />
+                android:hint="@string/incident_description" />
         </android.support.design.widget.TextInputLayout>
 
         <android.support.design.widget.TextInputLayout
@@ -97,14 +98,14 @@
                 android:gravity="top|start"
                 android:maxLines="10"
                 android:minLines="6"
-                android:hint="Description of medication" />
+                android:hint="@string/description_of_medication" />
         </android.support.design.widget.TextInputLayout>
 
         <Button
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/take_photo"
-            android:text="Take photo of Indicent"/>
+            android:text="@string/take_photo_of_indicent"/>
 
         <android.support.v7.widget.RecyclerView
             android:layout_width="match_parent"
