--- a/app/src/main/res/layout/fragment_events_list.xml
+++ b/app/src/main/res/layout/fragment_events_list.xml
@@ -3,14 +3,14 @@
     xmlns:fab="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context="radimbures.firstaidlog.EventsList">
 
     <TextView
         android:layout_width="match_parent"
         android:id="@+id/tv_empty"
         android:layout_height="match_parent"
-        android:text="Oh no, it seems that there's no data to display. Start adding some using + button." />
+        android:textSize="15sp"
+        android:text="@string/oh_no_it_seems_that_there_s_no_data_to_display_start_adding_some_using_button" />
 
     <ListView
         android:layout_width="fill_parent"
