--- a/app/src/main/res/layout/fragment_participant_database.xml
+++ b/app/src/main/res/layout/fragment_participant_database.xml
@@ -5,12 +5,11 @@
     android:layout_height="match_parent"
     tools:context="radimbures.firstaidlog.ParticipantDatabase">
 
-    <!-- TODO: Update blank fragment layout -->
     <TextView
         android:layout_width="match_parent"
         android:id="@+id/tv_empty"
         android:layout_height="match_parent"
-        android:text="Oh no, it seems that there's no data to display. Start adding some using + button." />
+        android:text="@string/oh_no_it_seems_that_there_s_no_data_to_display_start_adding_some_using_button" />
 
     <ListView
         android:layout_width="fill_parent"
