--- a/app/src/main/res/menu/menu_add_participant.xml
+++ b/app/src/main/res/menu/menu_add_participant.xml
@@ -5,7 +5,7 @@
 
     <item
         android:id="@+id/add_button"
-        android:title="Save"
+        android:title="@string/save"
         app:showAsAction="always"
         />
 
