--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -5,9 +5,9 @@
 
     <item
         android:id="@+id/add_button"
-        android:title="Save"
+        android:title="@string/save"
         android:icon="@drawable/ic_save_white_24px"
-        app:showAsAction="always"
+        app:showAsAction="ifRoom"
         android:visible="false"
         />
 
