--- a/app/src/main/res/layout/row_event.xml
+++ b/app/src/main/res/layout/row_event.xml
@@ -24,7 +24,7 @@
         <TextView
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:text=" - "
+            android:text="@string/date_separator"
             android:textColor="@android:color/holo_blue_dark"/>
         <TextView
             android:layout_width="fill_parent"
