--- a/app/src/main/res/layout/row_participant.xml
+++ b/app/src/main/res/layout/row_participant.xml
@@ -4,16 +4,32 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
     <TextView
-        android:layout_width="fill_parent"
-        android:layout_height="40dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:id="@+id/name_of_participant"
+        android:textSize="15sp"
+        android:paddingStart="10dp"
+        android:paddingEnd="8dp"
         android:textColor="@android:color/holo_blue_dark"/>
 
     <TextView
-        android:layout_width="fill_parent"
-        android:layout_height="40dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="15sp"
         android:id="@+id/surname_of_participant"
         android:textColor="@android:color/holo_blue_dark"/>
 
+    </LinearLayout>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:paddingStart="10dp"
+        android:id="@+id/personal_number22"
+        android:textColor="@android:color/holo_blue_dark"/>
 </LinearLayout>
