--- a/app/src/main/res/layout/row_participant.xml
+++ b/app/src/main/res/layout/row_participant.xml
@@ -11,6 +11,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:textStyle="bold"
         android:id="@+id/name_of_participant"
         android:textSize="15sp"
         android:paddingStart="10dp"
@@ -21,6 +22,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="15sp"
+        android:textStyle="bold"
         android:id="@+id/surname_of_participant"
         android:textColor="@android:color/holo_blue_dark"/>
 
