--- a/app/src/main/res/layout/fragment_participant_info.xml
+++ b/app/src/main/res/layout/fragment_participant_info.xml
@@ -1,13 +1,19 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:fab="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     android:paddingLeft="16dp"
     android:paddingRight="16dp"
     android:paddingTop="16dp"
     tools:context="radimbures.firstaidlog.ParticipantInfo">
-
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textColor="@color/colorAccent"
+        android:text="@string/medical_report_pdf"
+        android:textSize="20sp" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -89,4 +95,4 @@
         android:layout_gravity="bottom|end"
         android:layout_margin="@dimen/fab_margin"/>
 
-</FrameLayout>
+</LinearLayout>
