--- a/app/src/main/res/layout/fragment_participant_info.xml
+++ b/app/src/main/res/layout/fragment_participant_info.xml
@@ -1,4 +1,4 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:fab="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
@@ -8,17 +8,18 @@
     android:paddingRight="16dp"
     android:paddingTop="16dp"
     tools:context="radimbures.firstaidlog.ParticipantInfo">
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textColor="@color/colorAccent"
-        android:text="@string/medical_report_pdf"
-        android:textSize="20sp" />
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="@color/colorAccent"
+            android:text="@string/medical_report_pdf"
+            android:textSize="20sp" />
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -95,4 +96,4 @@
         android:layout_gravity="bottom|end"
         android:layout_margin="@dimen/fab_margin"/>
 
-</LinearLayout>
+</FrameLayout>
